fixed jumpyness

--- a/week10/race/src/app/main.component.css
+++ b/week10/race/src/app/main.component.css
@@ -1,6 +1,7 @@
 .road {
     height: 600px;
     width: 100%;
+    margin-top: 100px;
     background-image: url(assets/road.jpg);
     background-size: contain;
     position: relative;
@@ -21,7 +22,6 @@
     height: 100vh;
     overflow: hidden;
     background: green;
-    padding-top: 100px;
 }
 
 #score {
